--- a/assets/i18n/i18n_en.json
+++ b/assets/i18n/i18n_en.json
@@ -38,15 +38,18 @@
 
     "portfolio__title":"Portfolio",
     "portfolio__subtitle":"Most recent works",
-    "portfolio1__title":"Modern Website 1",
-    "portfolio1__description":"Website adaptable to all devices, with ui components and animated interactions.",
-    "portfolio2__title":"Modern Website 2",
-    "portfolio2__description":"Website adaptable to all devices, with ui components and animated interactions.",
-    "portfolio3__title":"Modern Website 3",
-    "portfolio3__description":"Website adaptable to all devices, with ui components and animated interactions.",
-    "contact__title":"Contact me",
+    "portfolio1__title":"Interstellar",
+    "portfolio1__description":"“Alone among the stars, bound by the weight of fate.”",
+    "portfolio2__title":"The Pools",
+    "portfolio2__description":"“In the depths of mist, where dreams and fears entwine, a secret lingers—waiting, inescapable.”",
+    "portfolio3__title":"“❤️I heard this might just heal you~ ”",
+    "portfolio3__description":"“Beneath the boundless sky, the blocky world nurtures infinite possibilities.”",
+    "portfolio4__title":"Minecraft-ID-Checker",
+    "portfolio4__description":"A software tool that uses the Mojang official API to check ID availability.",
+    
+    "contact__title":"Contact me ",
     "contact__subtitle":"Get in touch",
-    "tel":"Call me",
+    "tel":"Call me at",
     "tel__number":"17*******18",
     "email":"E-mail",
     "email__address":"LouisLycanl@gmail.com",
