--- a/assets/i18n/i18n_cn.json
+++ b/assets/i18n/i18n_cn.json
@@ -37,12 +37,14 @@
 
     "portfolio__title":"项目集",
     "portfolio__subtitle":"近期项目",
-    "portfolio1__title":"网站1",
-    "portfolio1__description":"网站采用响应式布局，适配于多种设备，具有UI组件和动画交互。",
-    "portfolio2__title":"网站2",
-    "portfolio2__description":"网站采用响应式布局，适配于多种设备，具有UI组件和动画交互。",
-    "portfolio3__title":"网站3",
-    "portfolio3__description":"网站采用响应式布局，适配于多种设备，具有UI组件和动画交互。",
+    "portfolio1__title":"《星际穿越》",
+    "portfolio1__description":"“独行群星之间，命运重负相随。”",
+    "portfolio2__title":"The Pools",
+    "portfolio2__description":"“迷雾深处，梦与恐惧交织，秘密潜伏其中，等待，无可逃避。”",
+    "portfolio3__title":"❤️ 听说这个好像可以治愈你~",
+    "portfolio3__description":"“在无垠的天空下，方块世界孕育无限可能。”",
+    "portfolio4__title":"Minecraft-ID-Checker",
+    "portfolio4__description":"一个可以调用Mojang官方api实行ID查询的软件。",
 
     "contact__title":"联系方式",
     "contact__subtitle":"与我联系",
