--- a/assets/i18n/i18n_en.json
+++ b/assets/i18n/i18n_en.json
@@ -2,6 +2,7 @@
     "home":"Home",
     "about":"About",
     "skills":"Skills",
+    "tutorial":"Tutorial",
     "portfolio":"Portfolio",
     "contact":"Contact Me",
     "home__title":"Halo! I'm Chifishfhish",
